Fix URLs in Exploring_Data and Showcase Tutorials
URLs to other pages on the same domain were missing their .ipynb
suffix. On the live copy of the documentation this corresponded
to omitting the .html suffix.

--- a/doc/Tutorials/Exploring_Data.ipynb
+++ b/doc/Tutorials/Exploring_Data.ipynb
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merging multiple ``HoloMap``s in this step-by-step way would be cumbersome, and avoiding this complexity is why the ``Collator`` object (another instance of ``Dimensioned``) has been provided.  ``Collator`` will be described in the [Columnar Data](Columnar_Data) tutorial."
+    "Merging multiple ``HoloMap``s in this step-by-step way would be cumbersome, and avoiding this complexity is why the ``Collator`` object (another instance of ``Dimensioned``) has been provided.  ``Collator`` will be described in the [Columnar Data](Columnar_Data.ipynb) tutorial."
    ]
   },
   {
