--- a/doc/Tutorials/Showcase.ipynb
+++ b/doc/Tutorials/Showcase.ipynb
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we create a high-dimensional [``HoloMap``](Exploring_Data) to explore: The tuple keys are the points in the parameter space, and the values are the corresponding ``Image`` objects:"
+    "Now we create a high-dimensional [``HoloMap``](Exploring_Data.ipynb) to explore: The tuple keys are the points in the parameter space, and the values are the corresponding ``Image`` objects:"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For convenience, the IPython-magic syntax for [setting options](Options) like ``%%opts`` is used throughout these tutorials.  However, you can use pure Python code to control the options in a similar way, e.g. from within an external non-IPython program where you want to render a HoloViews plot straight to a file, though it requires a few more curly brackets and quote marks:"
+    "For convenience, the IPython-magic syntax for [setting options](Options.ipynb) like ``%%opts`` is used throughout these tutorials.  However, you can use pure Python code to control the options in a similar way, e.g. from within an external non-IPython program where you want to render a HoloViews plot straight to a file, though it requires a few more curly brackets and quote marks:"
    ]
   },
   {
